--- a/fichiersDuProjet/assets/css/styles.css
+++ b/fichiersDuProjet/assets/css/styles.css
@@ -40,4 +40,18 @@ Remplacer tout le contenu.
     to {transform:rotate(360deg);}
 } 
 
+
+#temoin_activite{
+	height:20px;
+	width:20px;
+	border:1px solid black;
+}
+
+#container_entites div{
+	border:1px solid black;
+	padding:10px;
+	margin:10px;
+}
+
+
 /* == EOF == */
