Suite mode Edition #1
-Fichier SQL mis à jour
-Petits ajustement Header, etc
-Amélioration code/commentaires pour modeCreation et demo_mode_edition
-Ajout du support pour mettre à jour une entitée au complet (plutot que
seulement une partie), pas testé :(
-Ajout du support pour ajouter une entitée
-J'en suis à correctement documenter ce qu'on peux passer à la fonction
JS execXHR_Request, laquelle, à toutes fin pratique, est notre fonction
de DB, en fait tout passe par XHR, si on ne veux pas recharger la page a
chaque operation.
-Je vais devoir , une fois la doc pour "edition" faite, refaire en
partie les requetes et fonctions pour "creation" mais ça devrais etre
court, probablement changer 2-4 mots/verbes et documenter aussi
-Reste à faire le code de dragNdrop et tester/corriger ce que j'ai prévu
côté DB pour refleter les bugs qui vont surement montrer le bout de leur
nez!

--- a/fichiersDuProjet/assets/css/styles.css
+++ b/fichiersDuProjet/assets/css/styles.css
@@ -53,5 +53,10 @@ Remplacer tout le contenu.
 	margin:10px;
 }
 
-
+p[contenteditable="true"]{
+	background-color:#0d0;
+}
+#container_entites p:hover{
+	color:#0b0;
+}
 /* == EOF == */
