Page assistant, phase 3a
-toujours pas fini ;p

--- a/fichiersDuProjet/assets/css/styles.css
+++ b/fichiersDuProjet/assets/css/styles.css
@@ -12,6 +12,7 @@ Remplacer tout le contenu.
 	-moz-animation: eternalRotation 1.5s infinite linear;
 	-webkit-animation: eternalRotation 1.5s infinite linear;
     animation: eternalRotation 1.5s infinite linear;
+	margin-right:10px;
 }
 
 @-o-keyframes eternalRotation {
@@ -53,10 +54,10 @@ Remplacer tout le contenu.
 	margin:10px;
 }
 
-p[contenteditable="true"]{
-	background-color:#0d0;
+p[contenteditable="true"]{ /*  on peux détecter quand une balise est éditable */
+	background-color:#030;
 }
 #container_entites p:hover{
-	color:#0b0;
+	color:#0e0;
 }
 /* == EOF == */
