--- a/exemple_page_index/css/theme.css
+++ b/exemple_page_index/css/theme.css
@@ -1,11 +1,9 @@
-/* Sticky footer styles
--------------------------------------------------- */
 html {
 	position: relative;
 	min-height: 100%;
 }
 body {
-	/* Margin bottom by footer height */
+	/* **IMPORTANT** le margin bottom doit être la même hauteur que le height du #footer */
 	margin-bottom: 60px;
 	padding-top: 40px;
 }
@@ -19,26 +17,37 @@ body > .container {
 code {
 	font-size: 80%;
 }
+/* 
+ * Sticky footer
+ ** LIRE COMMENTAIRES **
+ * Peu importe le contenu de la page, le footer sera toujours au bas de la page et meme s'il n'y a pas de contenu, il sera au bas de l'écran.
+ */
 #footer {
 	position: absolute;
 	bottom: 0;
 	width: 100%;
-	/* Set the fixed height of the footer here */
+	/* **IMPORTANT** le height doit être la même hauteur que le margin bottom du body */
 	height: 60px;
 	background-color: #f5f5f5;
 }
 
 
-/* ACCUEIL */
+/*
+ * BEGIN ACCUEIL 
+ * ----------------------------------------
+ */
+ 
 .container > .titre{
 	display: inline-block;
 	width: 50%;
 	min-width: 265px;
 }
+
 /* NAV & HEADER */
 .navbar-header a > img{
 	max-width: 35px;
 }
+
 /* REGISTER FORM */
 .form-signin {
 	max-width: 330px;
@@ -83,66 +92,41 @@ code {
 	border-top-left-radius: 0;
 	border-top-right-radius: 0;
 }
-/* ACCUEIL */
-@media (max-width: 678px) {
-.container > .titre{
-		width: 100%;
-		min-width: 265px;
-		display: block;
-		position: static;
-		margin-left: 20px;
-	}
-	.form-signin {
-		display: block;
-		position: static;
-		max-width: 100%;
-		width: 100%;
-	}
-}
-@media (min-width: 768px) {
-	  .container > .titre{
-		width: 50%;
-		min-width: 265px;
-	}
-
-	/* REGISTER FORM */
-	.form-signin {
-		max-width: 330px;
-		padding: 15px;
-		width: 300px;
-	}
-}
-
-/* USER_VIEW */
-/*
- * Style tweaks
- * --------------------------------------------------
+/* 
+ * END ACCUEIL
  */
-.user_view html,
-.user_view body {
+ 
+ 
+/* 
+ * BEGIN HUB CLIENT 
+ * -----------------------------------------
+ */
+
+.hub_client html,
+.hub_client body {
   overflow-x: hidden; /* Prevent scroll on narrow devices */
 }
-.user_view body {
+.hub_client body {
   padding-top: 70px;
 }
-.user_view footer {
+.hub_client footer {
   padding: 30px 0;
 }
-.container > div > div{
+.hub_client .container > div > div{
 	width: 100%;
 }
-.container > div > div > div > div{
+.hub_client .btn-roman{
 	border: 1px solid #ccc;
 	cursor: pointer;
 	margin-left: -1px;
 	margin-bottom: -1px;
 	height: 220px;
 }
-.container > div > div > div > div:hover{
+.hub_client .btn-roman:hover{
 	border: 1px solid #3276b1;
 	z-index: 1000;
 }
-.nouveau_img{
+.hub_client .nouveau_img{
 	max-width: 70px;
 	position: absolute;
 	top: 50%;
@@ -151,16 +135,149 @@ code {
 	margin-left: -35px;
 	opacity: 0.3;
 }
-.last-cell h2{
+.hub_client .last-cell h2{
 	opacity: 0.5;
 }
-.last-cell{
+.hub_client .last-cell{
 	text-align: center;
 }
+
+/* 
+ * END HUB CLIENT 
+ */
+ 
+/* 
+ * BEGIN MODE EDITION
+ * -----------------------------------------
+ */
+
+ /* MEDIA Q. */
+@media (max-width: 678px){
+	.mode_edition .custom-box-content:first-of-type{
+		margin-right:10px;
+		margin-top: 60px;
+	}
+	.mode_edition .custom-box-content:last-of-type{
+		margin-right:10px;
+	}
+}
+
+.mode_edition .custom-box-content{
+	border: 1px solid #ddd;
+	margin-top: 60px;
+	margin-bottom: 30px;
+	padding: 0;
+	height: 600px;
+}
+.mode_edition .custom-box-content:last-of-type{
+	border-right: 1px solid #ddd;
+	margin-left: -1px;
+}
+.mode_edition .custom-ul{
+	font-size: 10pt;
+	margin-top: -39px;
+	margin-left: -1px;
+	width: 100%;
+	font-size: 9pt;
+}
+
+/* COMPOSTION */
+.mode_edition .wrap-composition{
+	width: 100%;
+	height: 100%;
+	padding: 10px;
+}
+.mode_edition .wrap-composition textarea{
+	width: 100%;
+	height: 100%;
+	resize: none;
+	border: 1px solid #ccc;
+	padding: 10px;
+}
+.mode_edition .wrap-composition textarea{
+	width: 100%;
+	height: 100%;
+	resize: none;
+	border: 1px solid #ccc;
+}
+/* AIDE MÉMOIRE */
+.mode_edition .wrap-aide-memoire{
+	width: 100%;
+	height: 100%;
+	padding-bottom: 10px;
+	overflow: auto;
+}
+.mode_edition .aide-memoire{
+	width: 98%;
+	min-height: 170px;
+	max-height: 260px;
+	border: 1px solid #ccc;
+	margin: auto;
+	margin-top: 10px;
+	overflow: hidden;
+}
+.mode_edition .aide-memoire-headings{
+	width: 100%;
+	height: 40px;
+	border-bottom: 1px solid #ccc;
+}
+.mode_edition .aide-memoire-headings span{
+	display: inline-block;
+	width: 100%;
+	height: 100%;
+	padding: 10px;
+	font-weight: bold;
+	text-align: center;
+}
+.mode_edition .aide-memoire-content{
+	width: 100%;
+	height: 100%;
+	max-height: 260px;
+	margin-top: -40px;
+	padding: 45px 10px 0 10px;
+}
+.mode_edition .aide-memoire-content span{
+	display: inline-block;
+	width: 100%;
+	height: 100%;
+	padding-bottom: 10px;
+}
+.mode_edition .wrap-aide-memoire .en-tete-aide-memoire{
+	font-weight: bold;
+	font-size: 13pt;
+	display: block;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	width: 100%;
+	text-align: center;
+}
+.mode_edition .aide-memoire:hover{
+	border: 1px solid #3276b1;
+	background: #F0F0F0 ;
+}
+.mode_edition .aide-memoire:hover .aide-memoire-headings{
+	border-bottom: 1px solid #3276b1;
+	background: #E8E8E8 ;
+}
+.mode_edition .titre-roman{
+	font-size: 26px;
+	display: block;
+	height: 40px;
+	width: 60%;
+	min-width: 300px;
+	margin-bottom: 20px;
+}
+/* 
+ * END EDITION CLIENT 
+ */
+
 /*
- * Off Canvas
+ * BEGIN MEDIA QUERIES
  * --------------------------------------------------
  */
+ 
+/* BEGIN of Off Canvas */
+/* Cache le form login dans un bouton Toggle qui affiche/cache le form quand le max-width est inférieur à 767px */
 @media screen and (max-width: 767px) {
   .row-offcanvas {
     position: relative;
@@ -201,4 +318,45 @@ code {
     width: 50%; /* 6 columns */
   }
 }
+/* END of Off Canvas */
+ 
+ 
+/* 
+ * BEGIN MEDIA Q. FOR ACCUEIL
+ */
+ 
+@media (max-width: 678px) {
+.container > .titre{
+		width: 100%;
+		min-width: 265px;
+		display: block;
+		position: static; /* Change la position et oblige le form de droite à etre en dessous quand le max-width est à 678px et moins*/
+		margin-left: 20px;
+	}
+	.form-signin {
+		display: block;
+		position: static; /* Change la position et oblige tous les éléments suivant à etre en dessous quand le max-width est à 678px et moins */
+		max-width: 100%;
+		width: 100%;
+	}
+}
+@media (min-width: 768px) {
+	  .container > .titre{
+		width: 50%;
+		min-width: 265px;
+	}
 
+	/* REGISTER FORM */
+	.form-signin {
+		max-width: 330px;
+		padding: 15px;
+		width: 300px;
+	}
+}
+/* 
+ * END ACCUEIL MEDIA SCREEN
+ */
+ 
+/* 
+ * END MEDIA QUERIES
+ */
