page Edition, mettre fonctionnelle passe 1
-Ajustements espacements a certains fichiers
-Il est maintenant possible d'éditer une entitée mais les changements ne
sont  pas encore sauvés
-On peux passer d'un type d'entitée à une autre
-J'ai avancé dans mon ToDo

--- a/fichiersDuProjet/assets/css/styles.css
+++ b/fichiersDuProjet/assets/css/styles.css
@@ -54,10 +54,10 @@ Remplacer tout le contenu.
 	margin:10px;
 }
 
-p[contenteditable="true"]{ /*  on peux détecter quand une balise est éditable */
+/*p[contenteditable="true"]{ / *  on peux détecter quand une balise est éditable * /
 	background-color:#030;
 }
 #container_entites p:hover{
 	color:#0e0;
-}
+}*/
 /* == EOF == */
