--- a/fichiersDuProjet/assets/css/theme.css
+++ b/fichiersDuProjet/assets/css/theme.css
@@ -267,6 +267,29 @@ code {
 	min-width: 300px;
 	margin-bottom: 20px;
 }
+
+.mode_edition .custom-ul>li.active{
+	-moz-border-bottom-colors: none;
+    -moz-border-left-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-top-colors: none;
+    background-color: #fff;
+    border-color: #ddd #ddd transparent;
+    border-image: none;
+    border-style: solid;
+    border-width: 1px;
+    color: #555;
+    cursor: default;
+	}
+.mode_edition .custom-ul>li{
+    border-radius: 4px 4px 0 0;
+    line-height: 1.42857;
+    margin-right: 2px;
+    display: block;
+    padding: 10px 15px;
+    position: relative;
+	cursor:pointer;
+}
 /*
  * END EDITION CLIENT
  */
