--- a/fichiersDuProjet/assets/css/theme.css
+++ b/fichiersDuProjet/assets/css/theme.css
@@ -207,6 +207,30 @@ code {
 	padding-bottom: 10px;
 	overflow: auto;
 }
+.mode_edition .aide-memoire-toolbar{
+	position: relative;
+	border-bottom: 1px solid #ccc;
+	width: 100%;
+	margin-top: 5px;
+	height: 40px;
+}
+.mode_edition .toolbar-title{
+	font-weight: bold;
+	display: inline-block;
+	width: 100%;
+	text-align: center;
+}
+.mode_edition .aide-memoire-toolbar img{
+	max-width: 30px;
+	position: absolute;
+	top: 0;
+}
+.mode_edition .aide-memoire-toolbar img:first-of-type{
+	right: 3px;
+}
+.mode_edition .aide-memoire-toolbar img:last-of-type{
+	right: 36px;
+}
 .mode_edition .aide-memoire{
 	width: 98%;
 	min-height: 170px;
@@ -220,6 +244,7 @@ code {
 	width: 100%;
 	height: 40px;
 	border-bottom: 1px solid #ccc;
+	position:relative;
 }
 .mode_edition .aide-memoire-headings span{
 	display: inline-block;
@@ -228,6 +253,18 @@ code {
 	padding: 10px;
 	font-weight: bold;
 	text-align: center;
+}
+.mode_edition .aide-memoire-headings img{
+	max-width: 25px;
+	position:absolute;
+}
+.mode_edition .aide-memoire-headings img:first-of-type{
+	right: 30px;
+	top: 7px;
+}
+.mode_edition .aide-memoire-headings img:last-of-type{
+	right: 3px;
+	top: 7px;
 }
 .mode_edition .aide-memoire-content{
 	width: 100%;
@@ -253,11 +290,11 @@ code {
 }
 .mode_edition .aide-memoire:hover{
 	border: 1px solid #3276b1;
-	background: #F0F0F0 ;
+	background: #F8F8F8;
 }
 .mode_edition .aide-memoire:hover .aide-memoire-headings{
 	border-bottom: 1px solid #3276b1;
-	background: #E8E8E8 ;
+	background: #F8F8F8;
 }
 .mode_edition .titre-roman{
 	font-size: 26px;
