page Edition, mettre fonctionnelle, passe 3
-Correction de mon plan
-Corrections des styles (theme.css)
-Retrait de styles.css
-Branchement des boutons (pas fini)
-Correction d'autres bugs

--- a/ReserveCode_Eric/styles.css
+++ b/ReserveCode_Eric/styles.css
@@ -42,11 +42,11 @@ Remplacer tout le contenu.
 } 
 
 
-#temoin_activite{
+/*#temoin_activite{
 	height:20px;
 	width:20px;
 	border:1px solid black;
-}
+}*/
 
 #container_entites div{
 	border:1px solid black;
