--- a/fichiersDuProjet/assets/css/theme.css
+++ b/fichiersDuProjet/assets/css/theme.css
@@ -22,6 +22,25 @@ code {
  ** LIRE COMMENTAIRES **
  * Peu importe le contenu de la page, le footer sera toujours au bas de la page et meme s'il n'y a pas de contenu, il sera au bas de l'écran.
  */
+ 
+ /* HEADER LOGIN */
+.inner-header{
+	position: relative;
+}
+.bienvenue_user{
+	display: inline-block;
+	position: absolute;
+	right: 0;
+	top: 3px;
+}
+.bienvenue_user span > ul{
+	list-style:none;
+	text-align: left;
+}
+.bienvenue_user span > ul > li > a{
+
+}
+ /* FOOTER */
 #footer {
 	position: absolute;
 	bottom: 0;
@@ -126,14 +145,18 @@ code {
 	border: 1px solid #3276b1;
 	z-index: 1000;
 }
-.hub_client .nouveau_img{
-	max-width: 70px;
+.hub_client .last-cell:hover > span{
+	background: url("../images/plus_hover.png");
+}
+.hub_client .nouveau_projet{
+	width: 70px;
+	height: 70px;
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	margin-top: -35px;
 	margin-left: -35px;
-	opacity: 0.3;
+	background: url("../images/plus.png") 70px 70px;
 }
 .hub_client .last-cell h2{
 	opacity: 0.5;
@@ -186,6 +209,23 @@ code {
 	width: 100%;
 	height: 100%;
 	padding: 10px;
+	position: relative;
+}
+#msg_confirm_save{
+	position: absolute;
+	bottom: 12px;
+	right: 12px;
+	background: rgba(255,255,255,0.5);
+	color: #3276b1;
+	font-size: 9pt;
+	padding-right: 10px;
+	padding-left: 10px;
+	
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 .mode_edition .wrap-composition textarea{
 	width: 100%;
