--- a/fichiersDuProjet/assets/css/theme.css
+++ b/fichiersDuProjet/assets/css/theme.css
@@ -287,11 +287,8 @@ code {
 	left:50%;
 	margin-left: -15px;
 }
-.mode_edition .aide-memoire-toolbar span:nth-of-type(2){
-	right: 3px;
-}
 .mode_edition .aide-memoire-toolbar span:last-of-type{
-	right: 30px;
+	right: 6px;
 }
 .mode_edition .aide-memoire{
 	width: 98%;
@@ -321,7 +318,7 @@ code {
 	-ms-transition: border .1s ease-in-out;
 	transition: border .1s ease-in-out;
 }
-.mode_edition .aide-memoire-headings span{
+.mode_edition .aide-memoire-headings span:first-of-type{
 	display: inline-block;
 	width: 100%;
 	height: 100%;
@@ -329,17 +326,17 @@ code {
 	font-weight: bold;
 	text-align: center;
 }
-.mode_edition .aide-memoire-headings img{
+.mode_edition .aide-memoire-headings span:not(:first-of-type){
 	max-width: 25px;
+	top: 8px;
 	position:absolute;
+	padding: 5px;
 }
-.mode_edition .aide-memoire-headings img:first-of-type{
-	right: 30px;
-	top: 7px;
+.mode_edition .aide-memoire-headings span:nth-of-type(2){
+	right: 28px;
 }
-.mode_edition .aide-memoire-headings img:last-of-type{
-	right: 3px;
-	top: 7px;
+.mode_edition .aide-memoire-headings span:last-of-type{
+	right: 6px;
 }
 .mode_edition .aide-memoire-content{
 	width: 100%;
