--- a/fichiersDuProjet/assets/css/theme.css
+++ b/fichiersDuProjet/assets/css/theme.css
@@ -182,7 +182,25 @@ code {
 .hub_client .last-cell{
 	text-align: center;
 }
-
+.hub_client .btn-roman .suppr_roman{
+	position: absolute;
+	right: 6px;
+	top: 6px;
+	display: inline-block;
+	max-width: 30px;
+	color: #000;
+	opacity: 0.5;
+	
+	-webkit-transition: opacity 0.1s ease-in-out,color 0.1s ease-in-out;
+	-moz-transition: opacity 0.1s ease-in-out,color 0.1s ease-in-out;
+	-o-transition: opacity 0.1s ease-in-out,color 0.1s ease-in-out;
+	-ms-transition: opacity 0.1s ease-in-out,color 0.1s ease-in-out;
+	transition: opacity 0.1s ease-in-out,color 0.1s ease-in-out;
+}
+.hub_client .btn-roman .suppr_roman:hover{
+	opacity: 1;
+	color: red;
+}
 /*
  * END HUB CLIENT
  */
@@ -251,12 +269,16 @@ code {
 	resize: none;
 	border: 1px solid #ccc;
 	padding: 10px;
+	
+	-webkit-transition: border .1s ease-in-out;
+	-moz-transition: border .1s ease-in-out;
+	-o-transition: border .1s ease-in-out;
+	-ms-transition: border .1s ease-in-out;
+	transition: border .1s ease-in-out;
 }
-.mode_edition .wrap-composition textarea{
-	width: 100%;
-	height: 100%;
-	resize: none;
-	border: 1px solid #ccc;
+.mode_edition .wrap-composition textarea:focus{
+	outline: none;
+	border: 1px solid #3276b1;
 }
 /* AIDE MÉMOIRE */
 .mode_edition .wrap-aide-memoire{
@@ -289,6 +311,20 @@ code {
 }
 .mode_edition .aide-memoire-toolbar span:last-of-type{
 	right: 6px;
+	opacity: 0.5;
+	color: #000;
+	cursor: pointer;
+	
+	-webkit-transition: opacity 0.1s ease-in-out,color 0.1s ease-in-out;
+	-moz-transition: opacity 0.1s ease-in-out,color 0.1s ease-in-out;
+	-o-transition: opacity 0.1s ease-in-out,color 0.1s ease-in-out;
+	-ms-transition: opacity 0.1s ease-in-out,color 0.1s ease-in-out;
+	transition: opacity 0.1s ease-in-out,color 0.1s ease-in-out;
+}
+.mode_edition .aide-memoire-toolbar span:last-of-type:hover{
+	right: 6px;
+	opacity: 1;
+	color: green;
 }
 .mode_edition .aide-memoire{
 	width: 98%;
@@ -334,9 +370,37 @@ code {
 }
 .mode_edition .aide-memoire-headings span:nth-of-type(2){
 	right: 28px;
+	opacity: 0.5;
+	color: #000;
+	cursor: pointer;
+	
+	-webkit-transition: opacity 0.1s ease-in-out,color 0.1s ease-in-out;
+	-moz-transition: opacity 0.1s ease-in-out,color 0.1s ease-in-out;
+	-o-transition: opacity 0.1s ease-in-out,color 0.1s ease-in-out;
+	-ms-transition: opacity 0.1s ease-in-out,color 0.1s ease-in-out;
+	transition: opacity 0.1s ease-in-out,color 0.1s ease-in-out;
+}
+.mode_edition .aide-memoire-headings span:nth-of-type(2):hover{
+	right: 28px;
+	opacity: 1;
+	color: #3276b1;
 }
 .mode_edition .aide-memoire-headings span:last-of-type{
 	right: 6px;
+	opacity: 0.5;
+	color: #000;
+	cursor: pointer;
+	
+	-webkit-transition: opacity 0.1s ease-in-out,color 0.1s ease-in-out;
+	-moz-transition: opacity 0.1s ease-in-out,color 0.1s ease-in-out;
+	-o-transition: opacity 0.1s ease-in-out,color 0.1s ease-in-out;
+	-ms-transition: opacity 0.1s ease-in-out,color 0.1s ease-in-out;
+	transition: opacity 0.1s ease-in-out,color 0.1s ease-in-out;
+}
+.mode_edition .aide-memoire-headings span:last-of-type:hover{
+	right: 6px;
+	opacity: 1;
+	color: red;
 }
 .mode_edition .aide-memoire-content{
 	width: 100%;
