--- a/fichiersDuProjet/assets/css/custom-style.css
+++ b/fichiersDuProjet/assets/css/custom-style.css
@@ -13,7 +13,7 @@ body {
 }
 .form .form-inner fieldset label{
 	display: block;
-	width: 30%;
+	width: 342px;
 	margin-left: auto;
 	margin-right: auto;
 	padding: 10px;
@@ -23,7 +23,7 @@ body {
 	color: #fff;
 }
 .form .form-inner fieldset input{
-	width: 30%;
+	width: 342px;
 	padding: 8px;
 }
 
@@ -31,8 +31,18 @@ body {
 	display: block;
 	margin-top: 10px;
 	resize: none;
-	width: 30%;
+	width: 342px;
 	margin-left: auto;
 	margin-right: auto;
 }
-
+@media (max-width: 678px) {
+	.form .form-inner fieldset label{
+		width: 80%;
+	}
+	.form .form-inner fieldset input{
+		width: 80%;
+	}
+	.form .form-inner fieldset textarea{
+		width: 80%;
+	}
+}
